[gd_scene load_steps=8 format=2]

[ext_resource path="res://weapons/GrenadeScript.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/grenade.png" type="Texture" id=2]
[ext_resource path="res://weapons/Models/grenade.fbx" type="PackedScene" id=3]
[ext_resource path="res://vfx/explosion.tscn" type="PackedScene" id=4]

[sub_resource type="PhysicsMaterial" id=3]
friction = 0.1
rough = true
bounce = 0.2

[sub_resource type="CapsuleShape" id=1]
radius = 0.848327
height = 0.669101

[sub_resource type="SphereShape" id=2]
radius = 3.47662

[node name="Grenade" type="RigidBody"]
collision_layer = 64
collision_mask = 159
mass = 1.5
physics_material_override = SubResource( 3 )
contacts_reported = 1
contact_monitor = true
can_sleep = false
linear_damp = 0.3
angular_velocity = Vector3( 0, 0, 0.3 )
angular_damp = 0.1
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1.19249e-08, 1, 0, -1, 1.19249e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.496785, 0 )
visible = false
texture = ExtResource( 2 )

[node name="ExplosionArea" type="Area" parent="."]
collision_layer = 0
collision_mask = 27

[node name="Area" type="CollisionShape" parent="ExplosionArea"]
shape = SubResource( 2 )

[node name="grenade" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, -1.41626, 0 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="VfxTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="Explosion" parent="." instance=ExtResource( 4 )]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="VfxTimer" to="." method="_on_VfxTimer_timeout"]
